test_suite/ui/not_enum.rs
#[derive(Copy, Clone, enumflags2::BitFlags)]
struct Foo(u16);

fn main() {}
